# xaiworkspace

./: .gitignore  CLAUDE.md  Dockerfile.bridge  Dockerfile.workspace  README.md  package.json  xaiworkspace-config.example.json
.github/workflows/: build.yml
bridge/: bridge.js  compose-manager.js  ecosystem.config.js  image-allowlist.js  lib.js  oauth.js  package.json  server.js  updater.js
bridge/test/: lib.test.js
config/: dev.json  prod.json  test.json
scripts/: push-bridge.sh
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  config.rs  docker.rs  lib.rs  main.rs  oauth.rs  tray.rs
workspace-base/: bridge.js  ecosystem.config.js  entrypoint.sh  lib.js  package.json
workspace-base/test/: lib.test.js
