[package]
name = "xaiworkspace"
version = "0.3.0"
edition = "2021"
description = "xAI Workspace desktop bootstrapper — launches bridge Docker container"
authors = ["xAI Workspace"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
url = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = "0.7"
open = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "xaiworkspace_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]
